tests/vertical-slice/reject/vec_enum_range_slice.hew
enum Colour { Red; Green; }

fn main() {
    let colours: Vec<Colour> = Vec::new();
    colours.push(Colour::Red);
    let head = colours[0..1];
    println(head.len());
}
